--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,14 @@
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link
+            rel="stylesheet"
+            href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+            integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+            crossorigin=""
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;800&display=swap"
             rel="stylesheet"
         />
